--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
+@import "tailwindcss";
+
+@theme inline {
+  --shadow-input:
+    0px 2px 3px -1px rgba(0, 0, 0, 0.1),
+    0px 1px 0px 0px rgba(25, 28, 33, 0.02),
+    0px 0px 0px 1px rgba(25, 28, 33, 0.08);
+}
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -76,6 +87,11 @@
   --sidebar-ring: oklch(0.708 0 0);
 }
 
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
@@ -118,3 +134,4 @@
     @apply bg-background text-foreground;
   }
 }
+
