--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@
 
 
 .hide-scrollbar::-webkit-scrollbar {
-  display: none; /* Chrome, Safari */
+  display: none; /* Chrome, Safari and Opera */
 }
 
 .loader {
